# asimplex

./: .asimplex_app_logs.db  .asimplex_sessions.db  .gitignore  PLAN.md  README.md  Sprint2_requirements_checklist.md  asimplex.code-workspace  pyproject.toml
non_code_resources/: flattened_product_list_V1.23_copy.csv  price_list.csv
simulation_outputs/: Peak_Shaving_Test_1.txt
src/asimplex/: __init__.py  constants.py  llm_usage.py
src/asimplex/agent/: __init__.py  runner.py  tools.py
src/asimplex/observability/: app_log_store.py
src/asimplex/persistence/: __init__.py  chat_history_store.py  session_store.py
src/asimplex/rag/: __init__.py  build_index.py  config.py  indexer.py  loader.py  retriever.py
src/asimplex/streamlit_app/: electrical_tariff_section.py  input_safety.py  load_profile_section.py  log_viewer_section.py  main.py  peak_shaving_table.py  power_profiles_plot.py  profile_columns.py  pv_profile_section.py  rate_limit.py  session_state.py  sidebar.py  sidebar_llm_dashboard.py  simulation_plan_section.py  simulation_results_section.py
src/asimplex/tools/: __init__.py  calculations.py  csv_tool.py  formatting.py  simuplex_simulation.py
tests/: test_agent_runner_tool_invocations.py  test_agent_tools.py  test_app_log_store.py  test_chat_history_store.py  test_import.py  test_llm_usage.py  test_session_store_llm_usage.py  test_session_store_profiles.py  test_session_store_versions.py
tests/tools/: test_csv_tool_reader.py
