[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asimplex"
version = "0.1.0"
description = "asimplex Python package"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "el_Boon" }]
dependencies = [
    "bokeh",
    "folium",
    "openai",
    "pandas",
    "plotly",
    "requests",
    "simuplex @ file:///C:/Users/el_Boon/code/simuplex",
    "streamlit",
    "streamlit-folium",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
